--- a/receitasedespesas/src/log4j.properties
+++ b/receitasedespesas/src/log4j.properties
@@ -10,3 +10,5 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 #log4j.logger.org.hibernate.SQL=info
 #log4j.logger.org.hibernate.type=TRACE
 #log4j.logger.org.hibernate.jdbc=info
+
+log4j.logger.org.springframework.web=debug
