--- a/receitasedespesas/WebContent/WEB-INF/web.xml
+++ b/receitasedespesas/WebContent/WEB-INF/web.xml
@@ -18,6 +18,11 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
+	<context-param>
+		<param-name>timezone</param-name>
+		<param-value>GMT-3</param-value>
+	</context-param>
+
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
 		<url-pattern>/</url-pattern>
